# tetris-C

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  game.c  game.h  main.c  makefile  pieces.inl  primlib.c  primlib.h  userInterface.c  userInterface.h
audio/: audio.c
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL_gfx.cmake
